
          #VVT: parameterize (int,float) : N,val = 4,4.1  8,4.2

Fixes:

    - The script_util.standard_utilities have a way to register a function
      that runs when the test script exits. When using Python3, calling
      exit_diff() inside the termination function was not returning a diff
      exit status. Now fixed.

Changes:

    - The deprecated functions in trig/perms.py have been removed.

    - Some deprecated utility files have been removed: runcmd.py, runjob.py,
      runjob_remote.py, runner, trigger.py, and triglog.py.  The rest of the
      files in the "trig" directory are now deprecated as well. In the future,
      the ones still used by vvtest will be moved into the "libvvtest"
      directory and the others removed.

    - Support for the XML test format has been removed.

    - A test script that is executable will be run directly (using the #!
      mechanism). Now when a plugin preload function returns a file path,
      that path will always be used to run the test (when before the test
      would still be run directly).

    - Python 2.6 is no longer supported. Now vvtest supports Python 2.7 and
      3.2 or newer.


==============================================================================

Release 1.4
-----------

Nov 09, 2022

Improvements:

    - A new user plugin function was added, test_runtime(), which can be used
      to set the runtime of tests. Test runtimes are used for some command line
      options, such as --tmin, --tmax, and --tsum.

    - Failed "depends on" specifications are now printed before tests are
      actually run. This means the messages will show up when using the '-g'
      option. Also, additional information is given about the failure.

    - The --run-dir option can now contain multiple path segments and/or can
      be an absolute path.

    - The script_util.platform_expr() and script_util.option_expr() now take
      shell-style wildcards in the expressions. For example,
