@@ -21,10 +21,13 @@ class trig_utility_tests( vtu.vvtestTestCase ):
     def test_a_file_from_the_trig_dir_can_be_imported(self):
         """
         when the trig directory goes away, this test should instead pick up
-        perms.py from libvvtest
+        perms.py from libvvtest; in that case, no sys.path manipulation is
+        needed because the top level directory of vvtest is already there
         """
         util.writefile( 'atest.vvt', """
+            import sys
             import vvtest_util as vvt
+            sys.path.insert( 1, vvt.VVTESTSRC+'/trig' )
             import perms
             print ( 'USRNAME='+str(perms.my_user_name()) )
             """ )
