@@ -56,6 +56,10 @@ Fixes:
 
 Changes:
 
+    - Contrary to a statement below, the PYTHONPATH is now loaded with all
+      necessary paths before a test is launched. The manipulation of sys.path
+      in the vvtest_util.py file has been removed.
+
     - The deprecated functions in trig/perms.py have been removed.
 
     - Some deprecated utility files have been removed: runcmd.py, runjob.py,
